--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <p class="card-text" style="color: #cecece;">
               <b>Описание: Там прекрасные модули</b> 
               </p>
-              <button type="button" onclick="location.href='https://t.me/zolotarev_modules';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Переходник</button>
+              <button type="button" onclick="location.href='https://t.me/zolotarev_modules';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Модули</button>
             </div>
         </div>
       </div> 
