--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <title>zolotarev</title>
 
     <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
@@ -53,7 +54,7 @@
 
            <h3 style="color: #cecece;">
             <small class="pc">
-                Информация о Вас.<br>
+                Андрей 17 Лет.<br>
                 Ваши языки: <br><br>
                 <span class='tag'><i class="fa-brands fa-square-js" id="js"></i> JavaScript</span> 
                 <span class='tag'><i class="fa-brands fa-html5" id="html"></i> HTML & CSS</span> 
@@ -61,7 +62,7 @@
                 <span class='tag'><i class="fa-brands fa-php" id="php"></i> PHP</span> 
             </small>
             <small class="mobile">
-              Информация о Вас.<br>
+              Андрей 17 Лет.<br>
               Ваши языки:<br> <br>
               <i class="fa-brands fa-square-js" id="js"></i> JavaScript<br> 
               <i class="fa-brands fa-html5" id="html"></i> HTML & CSS<br> 
