--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-    <title>zolotarev</title>
+    <title>zolotarev * bio</title>
 
     <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
     <link href="./styles/styles.css" rel="stylesheet" type="text/css">
     <link href="./styles/mobile.css" rel="stylesheet" type="text/css">
 
-    <meta content="О Introvert" property="og:title" />
-    <meta content="Introvert.ml - Это сайт, на исходнике Introvert" property="og:description" />
+    <meta content="О Zolotarev" property="og:title" />
+    <meta content="Zolotarev.ml - Это сайт Золотарёва" property="og:description" />
     <meta content="#FFFFFF" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 </head>
