--- a/index.html
+++ b/index.html
@@ -79,68 +79,86 @@
     </svg>
 
     <div class="projects" id="projects">
-    <center><h1 class="fw-bold" style="color: white;margin-top: -1%;">ПРОЕКТЫ</h1></center>
-    <div class="line"></div>
-    <br><br><br>
-
-    <div class="card-group">
+      <center><h1 class="fw-bold" style="color: white;margin-top: -1%;">ПРОЕКТЫ</h1></center>
+      <div class="line"></div>
+      <br><br><br>
+  
+      <div class="card-group">
+        <div class="card mb-3" style="max-width: 560px;background: #171717;" id="coal">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <br>
+              <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title" style="color: white;"><span class='purple'>zolotarev</span> - Telegram канал.</h5>
+                <p class="card-text" style="color: #cecece;">
+                <b>Описание: Там моя жизнь :)</b> 
+                </p>
+                <button type="button" onclick="location.href='https://t.me/zolotarevtm';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Переходник</button>
+                <button type="button" onclick="location.href='https://t.me/+12-MUip2zqpjYzEy';" class="btn btn-secondary fs-6 fw-semibold"><i class="fa-brands fa-telegram"></i> Приватка</button>
+              </div>
+          </div>
+        </div> 
+      </div>
+  
+      <div class="card-group">
+        <div class="card mb-3" style="max-width: 560px;background: #171717;" id="coal">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <br>
+              <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title" style="color: white;"><span class='purple'>zolotarev modules</span> - Модули для Хикки.</h5>
+                <p class="card-text" style="color: #cecece;">
+                <b>Описание: Там прекрасные модули</b> 
+                </p>
+                <button type="button" onclick="location.href='https://t.me/zolotarev_modules';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Модули</button>
+              </div>
+          </div>
+        </div> 
+      </div>
+  
       <div class="card mb-3" style="max-width: 560px;background: #171717;" id="coal">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <br>
-            <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title" style="color: white;"><span class='purple'>zolotarev</span> - Telegram канал.</h5>
-              <p class="card-text" style="color: #cecece;">
-              <b>Описание: Там моя жизнь :)</b> 
-              </p>
-              <button type="button" onclick="location.href='https://t.me/zolotarevtm';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Переходник</button>
-              <button type="button" onclick="location.href='https://t.me/+12-MUip2zqpjYzEy';" class="btn btn-secondary fs-6 fw-semibold"><i class="fa-brands fa-telegram"></i> Приватка</button>
+          <div class="row g-0">
+            <div class="col-md-4">
+              <br>
+              <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
             </div>
-        </div>
-      </div> 
-    </div>
-
-    <div class="card-group">
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title" style="color: white;"><span class='purple'>Oncite VPN</span> - VPN сервис.</h5>
+                <p class="card-text" style="color: #cecece;">
+                <b>Описание: VPN Сервис</b> 
+                </p>
+                <button type="button" onclick="location.href='https://vk.com/oncitevpn';" class="btn btn-primary fs-6 fw-semibold" id="invite"><i class="fa-solid fa-circle-plus"></i> VK</button>
+                <button type="button" onclick="location.href='https://t.me/oncitevpn';" class="btn btn-secondary fs-6 fw-semibold" id="invite"><i class="fa-brands fa-telegram"></i> Telegram</button>
+              </div>
+          </div>
+        </div> 
+      </div>
+  
       <div class="card mb-3" style="max-width: 560px;background: #171717;" id="coal">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <br>
-            <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title" style="color: white;"><span class='purple'>zolotarev modules</span> - Модули для Хикки.</h5>
-              <p class="card-text" style="color: #cecece;">
-              <b>Описание: Там прекрасные модули</b> 
-              </p>
-              <button type="button" onclick="location.href='https://t.me/zolotarev_modules';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> Модули</button>
+          <div class="row g-0">
+            <div class="col-md-4">
+              <br>
+              <center><img src="./img/quincynew.jpg" alt="..." id="project" width="130"></center>
             </div>
-        </div>
-      </div> 
-    </div>
-
-    <div class="card mb-3" style="max-width: 560px;background: #171717;" id="coal">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <br>
-            <center><img src="./img/logo.png" alt="..." id="project" width="130"></center>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title" style="color: white;"><span class='purple'>Quincy Tools</span> - Бот передачи жалоб.</h5>
+                <p class="card-text" style="color: #cecece;">
+                <b>Описание: Бот для передачи жалоб администрации.</b> 
+                </p>
+                <button type="button" onclick="location.href='https://vk.com/quincynew';" class="btn btn-primary fs-6 fw-semibold"><i class="fa-solid fa-circle-plus"></i> VK</button>
+              </div>
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title" style="color: white;"><span class='purple'>Oncite VPN</span> - VPN сервис.</h5>
-              <p class="card-text" style="color: #cecece;">
-              <b>Описание: VPN Сервис</b> 
-              </p>
-              <button type="button" onclick="location.href='https://vk.com/oncitevpn';" class="btn btn-primary fs-6 fw-semibold" id="invite"><i class="fa-solid fa-circle-plus"></i> VK</button>
-              <button type="button" onclick="location.href='https://t.me/oncitevpn';" class="btn btn-secondary fs-6 fw-semibold" id="invite"><i class="fa-brands fa-telegram"></i> Telegram</button>
-            </div>
-        </div>
-      </div> 
-    </div>
-</div>
+        </div> 
+      </div>
+  </div>  
 
   </div>
 </div>
